# AgEspNATRouter

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  component.mk  http_server.c  http_server.h  main.c  webserver.c  webserver.h
main/pages/: changePassword.html  dashboard.html  index.html
